--- a/.hintrc
+++ b/.hintrc
@@ -5,6 +5,7 @@
   "hints": {
     "detect-css-reflows/composite": "off",
     "detect-css-reflows/layout": "off",
-    "detect-css-reflows/paint": "off"
+    "detect-css-reflows/paint": "off",
+    "no-inline-styles": "off"
   }
 }
