--- a/client/package.json
+++ b/client/package.json
@@ -6,12 +6,13 @@
     "scripts": {
         "dev": "vite dev",
         "build": "vite build",
+        "siphon-dev": "siphon-cli -b",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "keywords": [],
     "author": "Adebola Akomolafe",
     "license": "ISC",
     "devDependencies": {
-        "vite": "^4.3.3"
+        "vite": "^4.3.9"
     }
 }
