--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "prettier.tabWidth": 4,
-    "editor.tabSize": 4
+    "editor.tabSize": 4,
+    "liveServer.settings.root": "../client/dist"
 }
