--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "vite": "^4.4.5"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "sass": "^1.65.1",
     "svelte-preprocess": "^5.0.4",
     "svelte-spa-router": "^3.3.0"
